# mitre-attack-csv

./: .pre-commit-config.yaml  README.md  mitre_attack_csv.py  mitre_attack_technique.csv  pyproject.toml
.github/workflows/: execute.yml  lint.yml
output/: mitre_attack_tactic.csv  mitre_attack_technique.csv  mitre_attack_technique_tactic.csv
