[tool.poetry]
name = "mitre-attack-csv"
version = "0.1.0"
description = ""
authors = ["Lucas Abel <lucas.abel@fr.clara.net>"]
readme = "README.md"
packages = [{include = "mitre_attack_csv"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
pre-commit = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
