[tool.poetry]
name = "mitre-attack-csv"
version = "1.0.0"
description = ""
authors = ["Lucas Abel <lucas.abel@fr.clara.net>"]
readme = "README.md"
packages = [{include = "mitre_attack_csv"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.5"
pre-commit = "^4.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
